=== SVN

* Fixed MySQL::Database#<< method to always free the result in order to allow multiple calls in a row (#149). Same also for PostgreSQL adapter.

=== 1.0.7 (2008-02-05)

* Added support for conditional filters (using if else statements) inside block filters (thanks Kee).

=== 1.0.6 (2008-02-05)

* Removed code pollution introduced in revs 814, 817 (really bad patch, IMO).

* Fixed joining datasets using aliased tables (#140).

* Added support additional field types in postgresql adapter (#146).

* Added support for date field types in postgresql adapter (#145).

* Fixed Dataset#count to work correctly for grouped datasets (#144).

* Added Dataset#select_more, Dataset#order_more methods (#129).

=== 1.0.5 (2008-01-25)

* Added support for instantiating models by using the load constructor method.

=== 1.0.4.1 (2008-01-24)

* Fixed bin/sequel to require sequel_model if available.

=== 1.0.4 (2008-01-24)

* Added Dataset#select_all method.

* Changed ODBC::Database to support connection using driver and database name, also added support for untitled columns in ODBC::Dataset (thanks Leonid Borisenko).

* Fixed MySQL adapter to correctly format foreign key definitions (#123).

* Changed MySQL::Dataset to allow HAVING clause on ungrouped datasets, and put HAVING clause before ORDER BY clause (#133).

* Changed Dataset#group_and_count to accept multiple columns (#134).

* Fixed database spec to open YAML file in binary mode (#131).

* Cleaned up gem spec (#132).

* Added Dataset#table_exists? convenience method.

=== 1.0.3 (2008-01-17)

* Added support for UNSIGNED constraint, used in MySQL? (#127).

* Implemented constraint definitions inside Database#create_table.

* Fixed postgres adapter to define PGconn#async_exec as alias to #exec if not defined (for pure-ruby postgres driver).

* Added String#to_date. Updated mysql adapter to use String#to_date for mysql date types (thanks drfreeze).

=== 1.0.2 (2008-01-14)
